--- a/HTML/about.html
+++ b/HTML/about.html
@@ -50,15 +50,19 @@
 
 
 <section>
-    <h2>About</h2>
-    <article>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-            sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-    </article>
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>About Us</h2>
+                    <p>We started this project with the intention to give Sneaker Enthusiast a platform to share there on feet pictures</p>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+
 </section>
 
 
