--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -51,23 +51,22 @@
 <section>
     <div class="container">
         <div class="row">
-            <div>
-                <figure>
-                    <div class="col-xs-12">
-                        <a href="viewPicByClick.html">
-                            <img class="img-responsive" src="../img/IMG_5109.JPG" width="800" height="120">
-                        </a>
 
-                        <figcaption>Titelbild</figcaption>
-                    </div>
+
+            <div class="col-xs-12">
+                <figure>
+
+                    <a href="viewPicByClick.html">
+                        <img class="img-responsive" src="../img/IMG_5109.JPG" width="800" height="120">
+                    </a>
+
+                    <figcaption>Titelbild</figcaption>
+
                 </figure>
             </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
 
-            <div class="col-xs-12 col-sm-4">
+
+            <div class="col-xs-12 col-sm-3">
                 <figure>
                     <img class="image-responsive" src="../img/profilPic.jpg" height="130" width="130"/>
                     <figcaption>
@@ -76,7 +75,7 @@
                 </figure>
             </div>
 
-            <div class="col-xs-12 col-sm-8">
+            <div class="col-xs-12 col-sm-9">
                 <label for="username">Username: </label>
                 <span id="username">MaxMuster</span><br>
 
@@ -93,35 +92,39 @@
                 <span id="likes">1000</span>
             </div>
 
+
+            <article>
+                <div class="col-xs-12">
+                    <h2>About me</h2>
+
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut
+                        labore et
+                        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                        rebum. Stet
+                        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+                        sit
+                        amet,
+                        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                        aliquyam erat,
+                        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+                        gubergren, no
+                        sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                </div>
+            </article>
+
+            <div class="col-xs-12">
+                <h2>Shoes i own</h2>
+
+                <ul>
+                    <li>Asics GLV Mint</li>
+                    <li>Nike AirMax</li>
+                    <li>Adidas ZX Flux</li>
+                    <li>Other</li>
+                </ul>
+            </div>
+
         </div>
-    </div>
-
-
-    <article>
-        <h2>About me</h2>
-
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-            labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-            rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
-            amet,
-            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-            aliquyam erat,
-            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-            gubergren, no
-            sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-    </article>
-
-    <div>
-        <h2>Shoes i own</h2>
-
-        <ul>
-            <li>Asics GLV Mint</li>
-            <li>Nike AirMax</li>
-            <li>Adidas ZX Flux</li>
-            <li>Other</li>
-        </ul>
     </div>
 
 </section>
