--- a/HTML/login.html
+++ b/HTML/login.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+    <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
     <title>snkrGllry</title>
 
 
@@ -80,7 +80,7 @@
 
 <footer>
 
-    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+    <div class="navbar navbar-default nav-links">
         <div class="container">
             <ul class="nav navbar-nav">
                 <li><a href="contact.html">Contact</a></li>
