--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -50,29 +50,29 @@
 
 
 <section>
-    <form>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-sm-6 col-xs-12">
-                    <div class="form-group">
-                        <h2>Contact Details</h2>
-                    </div>
-                    <div class="form-group">
-                        <p><b>Lars Schweikardt</b></p>
-                        <p>Alemannenstrasse 11</p>
-                        <p>78467 Konstanz</p>
-                        <a href="mailto:"schweikardt-lars@hotmail.de">E-mail me</a>
-                        <br>
-                        <br>
-                        <p><b>Manuel Müller</b></p>
-                        <p>Schottenstrasse 71B</p>
-                        <p>78462 Konstanz</p>
-                        <a href="mailto:"maschmusemail@email.de">E-mail me</a>
 
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-sm-6 col-xs-12">
+                <div class="form-group">
+                    <h2>Contact Details</h2>
                 </div>
+                <div class="form-group">
+                    <p><b>Lars Schweikardt</b></p>
+                    <p>Alemannenstrasse 11</p>
+                    <p>78467 Konstanz</p>
+                    <a href="mailto:schweikardt-lars@hotmail.de">E-mail me</a>
+                    <br>
+                    <br>
+                    <p><b>Manuel Müller</b></p>
+                    <p>Schottenstrasse 71B</p>
+                    <p>78462 Konstanz</p>
+                    <a href="mailto: maschmusemail@email.de">E-mail me</a>
 
+                </div>
+            </div>
 
+            <form>
                 <div class="col-lg-6 col-sm-6 col-xs-12 ">
                     <h2>Contact Formular</h2>
                     <div class="form-group">
@@ -97,21 +97,22 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 ">
+                <div class="col-xs-12 col-sm-6 col-lg-6">
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
+    </div>
 
-    </form>
+
 </section>
 
 
 <footer>
 
-    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+    <div class="navbar navbar-default nav-links">
         <div class="container">
             <ul class="nav navbar-nav">
                 <li><a href="contact.html">Contact</a></li>
