--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -111,13 +111,17 @@
 
 
     <div class="container">
-        <div>
-            <div class="col-xs-12 thumb">
-                <h2>Colorful like a rainbow</h2>
+        <div class="row">
+            <div class="col-xs-12 col-centered">
+                <h2 class="row-centered">Colorful like a rainbow</h2>
+
                 <figure>
-                    <img class="img-responsive" src="../img/IMG_5087.JPG" width="569" height="379">
+                    <img class="img-responsive center-block" src="../img/IMG_5087.JPG" width="569" height="379">
                     <figcaption>Adidas Multicolor 2.0</figcaption>
                 </figure>
+            </div>
+
+            <div class="col-xs-12">
                 <article>
                     <h3>Taste the rainbow</h3>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
@@ -131,7 +135,112 @@
                         labore et dolore
                         magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
                         rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    </p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal"
+                                data-target="#uploadModal">Open Modal
+                        </button>
+                    </div>
+
+                    <!-- Modal -->
+                    <div id="uploadModal" class="modal fade" role="dialog">
+                        <div class="modal-dialog modal-lg modal-sm">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Upload</h4>
+                                </div>
+
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="brandSelect">Brand</label>
+                                            <select class="form-control" id="brandSelect">
+                                                <option>Nike</option>
+                                                <option>Adidas</option>
+                                                <option>Puma</option>
+                                                <option>Asics</option>
+                                                <option>Reebok</option>
+                                                <option>Saucony</option>
+                                                <option>Other</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="colorSelect">Color</label>
+                                            <select class="form-control" id="colorSelect">
+                                                <option>Black</option>
+                                                <option>White</option>
+                                                <option>Red</option>
+                                                <option>Yellow</option>
+                                                <option>Orange</option>
+                                                <option>Brown</option>
+                                                <option>Other</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="styleSelect">Style</label>
+                                            <select class="form-control" id="styleSelect">
+                                                <option>Running</option>
+                                                <option>Basketball</option>
+                                                <option>Tennis</option>
+                                                <option>Other</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="materialSelect">Style</label>
+                                            <select class="form-control" id="materialSelect">
+                                                <option>Running</option>
+                                                <option>Basketball</option>
+                                                <option>Tennis</option>
+                                                <option>Other</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="shapeSelect">Style</label>
+                                            <select class="form-control" id="shapeSelect">
+                                                <option>this</option>
+                                                <option>that</option>
+                                                <option>Other</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="yearSelect">Style</label>
+                                            <select class="form-control" id="yearSelect">
+                                                <option>2016</option>
+                                                <option>2015</option>
+                                                <option>2014</option>
+                                                <option>2013</option>
+                                                <option>2012</option>
+                                                <option>2014</option>
+                                                <option>2014</option>
+
+
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="descriptionTextarea">Description</label>
+                                            <textarea class="form-control" id="descriptionTextarea"
+                                                      rows="3"></textarea>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="exampleInputFile">File input</label>
+                                            <input type="file" class="form-control-file" id="exampleInputFile">
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close
+                                        </button>
+                                    </form>
+
+
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
                 </article>
             </div>
         </div>
@@ -233,9 +342,27 @@
 </section>
 
 
+<section>
+
+    <div class="container">
+
+        <div class="row-centered">
+
+            <ul class="pagination">
+                <li><a href="index.html">1</a></li>
+                <li><a href="index.html">2</a></li>
+                <li><a href="index.html">3</a></li>
+                <li><a href="index.html">4</a></li>
+                <li><a href="index.html">5</a></li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
 <footer>
 
-    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+    <div class="navbar navbar-default nav-links">
         <div class="container">
             <ul class="nav navbar-nav">
                 <li><a href="contact.html">Contact</a></li>
