--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -218,6 +218,27 @@
         </div>
     </div>
 </section>
+
+<section>
+
+    <div class="container">
+
+        <div class="row-centered">
+
+            <ul class="pagination">
+                <li><a href="index.html">1</a></li>
+                <li><a href="index.html">2</a></li>
+                <li><a href="index.html">3</a></li>
+                <li><a href="index.html">4</a></li>
+                <li><a href="index.html">5</a></li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
+
+
 <footer>
 
     <div class="navbar navbar-default nav-links navbar-fixed-bottom">
