--- a/HTML/upload.html
+++ b/HTML/upload.html
@@ -160,7 +160,7 @@
 </section>
 
 <footer>
-    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
+    <div class="navbar navbar-default nav-links">
         <div class="container">
             <ul class="nav navbar-nav">
                 <li><a href="contact.html">Contact</a></li>
