--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -40,66 +40,7 @@
                     <li><a href="contest.html">Contest</a></li>
                     <li><a href="news.html">News</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li>
-                        <a href="#" data-toggle="modal" data-target="#loginModal">Login</a>
-
-                        <!-- Modal -->
-                        <div id="loginModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog modal-lg modal-sm">
-
-                                <!-- Modal content-->
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Upload</h4>
-                                    </div>
-
-                                    <div class="modal-body">
-                                        <form>
-                                            <div class="form-group">
-                                                <label for="loginUsername">Username</label>
-                                                <input type="text" class="form-control" id="loginUsername"
-                                                       placeholder="Enter Username">
-                                            </div>
-
-                                            <div class="form-group">
-                                                <label for="loginPassword">Password</label>
-                                                <input type="password" class="form-control" id="loginPassword"
-                                                       placeholder="Password">
-                                            </div>
-                                            <a href="index.html" class="btn btn-primary" role="button">Login</a>
-                                            <div class="form-group">
-                                                <label for="registerUsername">Username</label>
-                                                <input type="text" class="form-control" id="registerUsername"
-                                                       placeholder="Enter Username">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="registerEmail">Email address</label>
-                                                <input type="email" class="form-control" id="registerEmail"
-                                                       placeholder="Enter email">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="registerPassword">Password</label>
-                                                <input type="password" class="form-control" id="registerPassword"
-                                                       placeholder="Password">
-                                            </div>
-
-                                            <a href="index.html" class="btn btn-primary" role="button">Register</a>
-                                        </form>
-
-
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close
-                                        </button>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-
-
-                    </li>
+                    <li><a href="login.html">Login</a></li>
                     <li><a href="profile.html">Profile</a></li>
                 </ul>
             </div>
@@ -114,8 +55,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-centered">
-                <h2 class="row-centered">Colorful like a rainbow</h2>
+            <div class="col-lg-6 col-md-6 col-xs-12">
+                <h2>Colorful like a rainbow</h2>
 
                 <figure>
                     <img class="img-responsive center-block" src="../img/IMG_5087.JPG" width="569" height="379">
@@ -123,7 +64,7 @@
                 </figure>
             </div>
 
-            <div class="col-xs-12">
+            <div class="col-lg-6 col-md-6 col-xs-12">
                 <article>
                     <h3>Taste the rainbow</h3>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
@@ -140,8 +81,8 @@
                         clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
                     </p>
                     <div class="text-center">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal"
-                                data-target="#uploadModal">Open Modal
+                        <button type="button" class="btn" data-toggle="modal"
+                                data-target="#uploadModal">Upload
                         </button>
                     </div>
 
