--- a/HTML/login.html
+++ b/HTML/login.html
@@ -50,31 +50,44 @@
 </header>
 
 
-
 <section>
 
+
     <h2>Login</h2>
-
     <form>
-        <label for="logUsername"> Username: </label>
-        <input id="logUsername" type="text" >
+        <div class="form-group">
+            <label for="loginUsername">Username</label>
+            <input type="text" class="form-control" id="loginUsername"
+                   placeholder="Enter Username">
+        </div>
 
-        <label for="logPassword"> Password</label>
-        <input id="logPassword" type="password" >
+        <div class="form-group">
+            <label for="loginPassword">Password</label>
+            <input type="password" class="form-control" id="loginPassword"
+                   placeholder="Password">
+        </div>
+        <a href="index.html" class="btn " role="button">Login</a>
 
-        <input type="submit" value="Login">
     </form>
-
-    <h2>Register new Account</h2>
-
+    <h2>Register a new Account</h2>
     <form>
-        <label for="regUsername">Username: </label>
-        <input id="regUsername" type="text" >
-        <label for="regPassword">Password:</label>
-        <input id="regPassword" type="password" >
-        <label for="email">E-Mail: </label>
-        <input type="email" id="email">
-        <input type="submit" value="Register">
+        <div class="form-group">
+            <label for="registerUsername">Username</label>
+            <input type="text" class="form-control" id="registerUsername"
+                   placeholder="Enter Username">
+        </div>
+        <div class="form-group">
+            <label for="registerEmail">Email address</label>
+            <input type="email" class="form-control" id="registerEmail"
+                   placeholder="Enter email">
+        </div>
+        <div class="form-group">
+            <label for="registerPassword">Password</label>
+            <input type="password" class="form-control" id="registerPassword"
+                   placeholder="Password">
+        </div>
+
+        <a href="index.html" class="btn" role="button">Register</a>
     </form>
 
 </section>
